--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "cross-env NODE_ENV=test jest"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,9 @@
     "sqlite3": "5.1.6"
   },
   "devDependencies": {
+    "@jest/globals": "28.1.2",
+    "cross-env": "^10.1.0",
+    "jest": "28.1.2",
     "nodemon": "^3.1.10"
   }
 }
