feat: Ajustes de configuração para realização dos testes + finalizando crud de teste de categoria.

--- a/src/database/config/config.json
+++ b/src/database/config/config.json
@@ -4,7 +4,7 @@
     "storage": "./src/database/storage/database.sqlite"
   },
   "test": {
-    "database": "sqlite",
+    "dialect": "sqlite",
     "storage": ":memory:",
     "logging": false
   },
