--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@jest/globals": "28.1.2",
     "cross-env": "^10.1.0",
     "jest": "28.1.2",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "supertest": "6.2.4"
   }
 }
